--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -1,6 +1,34 @@
-<h1>Edit article</h1>
+<h1>Edit Contact</h1>
  
-<%= render 'form' %>
+<%= form_for :contact, url: contact_path(@contact), method: :patch do |f| %>
+<p>
+    <%= f.label :firstname %><br>
+    <%= f.text_field :firstname %>
+  </p>
  
+  <p>
+    <%= f.label :lastname %><br>
+    <%= f.text_field :lastname %>
+  </p>
+ 
+  <p>
+    <%= f.label :emailid %><br>
+    <%= f.text_field :emailid %>
+  </p>
+
+<p>
+    <%= f.label :mobileno %><br>
+    <%= f.text_field :mobileno %>
+  </p>
+
+<p>
+    <%= f.label :address %><br>
+    <%= f.text_field :address %>
+  </p>
+
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %> 
 <%= link_to 'Back', contacts_path %>
 
