--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,3 +1,8 @@
+<div align="center">
+<img src="/assets/old-curled-paper.jpg" height="650">
+</div>
+
+<div style="position: absolute; top: 10%; left:43%">
 <h1>New contact</h1>
  
 <%= render 'form' %>
