--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>Edit Contact</h1>
- 
+<body style= "background:url('/assets/paperpen.jpg'); background-repeat:no-repeat; background-size: cover">
+
+<div style="position: absolute; top: 15%; left:35%">
+<h1>Edit Contact</h1> 
 <%= form_for :contact, url: contact_path(@contact), method: :patch do |f| %>
 <p>
     <%= f.label :firstname %><br>
@@ -25,10 +27,12 @@
     <%= f.label :address %><br>
     <%= f.text_field :address %>
   </p>
-
-  <p>
-    <%= f.submit %>
+<p>
+  <%= f.label :Upload_photo %> : 
+<%= f.file_field :upload %></p>
+<%= f.submit %>
   </p>
+
 <% end %> 
 <%= link_to 'Back', contacts_path %>
 
