changed view of edit page

--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -1,6 +1,7 @@
 <body style= "background:url('/assets/paperpen.jpg'); background-repeat:no-repeat; background-size: cover">
 
-<div style="position: absolute; top: 15%; left:35%">
+<div style="position: absolute; top: 15%; left:18%; padding:15px 15px 15px 30px; border:3px solid;
+border-radius:20px;">
 <h1>Edit Contact</h1> 
 <%= form_for :contact, url: contact_path(@contact), method: :patch do |f| %>
 <p>
