--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -2,7 +2,6 @@
 <span >  <%= link_to 'signup',    new_user_registration_path %></span>
 <span >  <%= link_to 'logout',    destroy_user_session_path %></span>
 
-
 <body style="background:url('/assets/28094.jpg'); background-repeat:no-repeat; background-size: cover">
 <div  style="position:absolute; width:275px; height:500px;  left:60%; top:15%; -webkit-transform: rotate(-16deg); ">
     <h5>Contacts Book</h5>
@@ -50,5 +49,4 @@
 
     <% end %>
   </div>
-
-</div>
+</body>
